<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="hello">Hello World, BacktoPhysics!</string>
    <string name="app_name">Back to Physics</string>
    <string name="lblJuegoNuevo">Juego Nuevo</string>
    <string name="lblContinuar">Continuar</string>
    <string name="lblScores">High Scores</string>
    <string name="lblOpciones">Opciones</string>
    <string name="lblAcercaDe">Acerca De</string>
    <string name="lblTitulo">BACK TO PHISICS</string>
    <string name="txtAcercaDe">
    \nBack to Physics
    \n
    \nAutores: 
    \n
    \n Verónica Fajardo A01163407
    \n Andrés Duran Kenny Espinoza A01162492 
    \n Gerardo Caballero Soto A01163487
    \n Luis Ivan Campos Soriano A01163407
    \n
    \n
    \nVersion: 1.0
    \n
    \nProyecto de solución de problemas con programación.
    \n
    \nCopyright 2011, ITESM
    </string>
    <string name="txtOpciones">OPCIONES</string>
    <string name="txtSonidos">Sonido</string>
    <string name="txtMusica">Musica</string>
    <string name="txtAcelerometro">Acelerometro</string>
    <string name="txtAyuda">   \nAYUDA
    \n
    \nRules: 
    \n
    \n Aqui se declarán las reglas del juego
    \n 
    \n 
    \n 
    \n
    \n
    \n
    \n
    \n
    \n
    \n</string>
    <string name="lblLoading">Cargando...</string>
    <string name="lblSabiasQue">¿Sabia que…?</string>
    <string name="cntSabiasQue">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis placerat cursus ipsum vitae mollis. Pellentesque.</string>
    <string name="lblSonido"></string>
    <string name="lblMusica"></string>
    <string name="lblAyuda">Ayuda</string>
</resources>
